# scaw

./: .gitignore  Cairn_2E_Players_Guide.md  Cairn_2E_Wardens_Guide.md  Cairn_Solo_Warden_Manual.md  Cairn_Solo_Warden_PRD.md  GEMINI.md  PLAN.md  README.md  alembic.ini  cairn_solo_rules.md  doc.md  hello.py  log.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 034f266e495b_add_location_connections_and_update_.py  329babde56d8_add_summary_to_mappoint_and_is_entry_.py  7a21b3d74a12_add_max_attributes.py  add_tension_tracking_system.py  aebd9bc93087_add_world_state_table.py  e1c340195dac_initial_migration.py  f7f9dfe29556_add_scars_and_is_hostile_to_game_entity.py
src/: app.py
src/core/: character_generator.py  condition_tracker.py  llm_service.py  oracles.py  orchestrator.py  rag_service.py  world_generator.py  world_manager.py  world_tools.py
src/database/: database.py  models.py
src/ui/: character_creation_view.py  main_view.py  sidebar_view.py
tests/: conftest.py  test_character_generator.py  test_condition_tracker.py  test_extended_orchestrator.py  test_extended_world_tools.py  test_llm_service.py  test_npc_relationships.py  test_orchestrator.py  test_tension_escalation.py  test_world_manager.py  test_world_tools.py
